<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.sheendev.qrbarcodescanner.app.module.about.AboutActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="@dimen/spaceLarge">

                <TextView
                    style="@style/CaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xml_about"/>

                <TextView
                    style="@style/TitleSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/spaceLarge"
                    android:text="@string/xml_sincerely"
                    android:textSize="@dimen/textMedium"/>
            </LinearLayout>

            <TextView
                style="@style/CaptionSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spaceLarge"
                android:text="@string/xml_sorry_for_ads"/>

            <id.sheendev.qrbarcodescanner.app.ui.widget.SingleMenuLayout
                android:id="@+id/menu_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sm_setIcon="@drawable/ic_favorite"
                app:sm_showIcon="true"
                app:sm_subtitle="@string/xml_rate_review_desc"
                app:sm_title="@string/xml_rate_review"/>

            <id.sheendev.qrbarcodescanner.app.ui.widget.SingleMenuLayout
                android:id="@+id/menu_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceMedium"
                app:sm_setIcon="@drawable/ic_email"
                app:sm_showIcon="true"
                app:sm_subtitle="@string/xml_private_message_desc"
                app:sm_title="@string/xml_private_message"/>

            <id.sheendev.qrbarcodescanner.app.ui.widget.SingleMenuLayout
                android:id="@+id/menu_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceMedium"
                app:sm_setIcon="@drawable/ic_share_color"
                app:sm_showIcon="true"
                app:sm_subtitle="@string/xml_share_app_desc"
                app:sm_title="@string/xml_share_app"/>

            <TextView
                android:id="@+id/txt_version"
                style="@style/CaptionSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/spaceLarge"
                android:text="1.0.0"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
