<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.sheendev.qrbarcodescanner.app.module.profile.ProfileActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/spaceLarge">

        <TextView
            android:id="@+id/txt_username"
            style="@style/TitleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spaceLarge"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/txt_email"
            style="@style/CaptionMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/CaptionSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/spaceLarge"
            android:text="@string/xml_signin_using_gmail"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <id.sheendev.qrbarcodescanner.app.ui.widget.SingleMenuLayout
                android:id="@+id/menu_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceLarge"
                app:sm_setIcon="@drawable/ic_favorite"
                app:sm_showIcon="true"
                app:sm_subtitle="@string/xml_rate_review_desc"
                app:sm_title="@string/xml_rate_review"/>

            <id.sheendev.qrbarcodescanner.app.ui.widget.SingleMenuLayout
                android:id="@+id/menu_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceMedium"
                app:sm_setIcon="@drawable/ic_email"
                app:sm_showIcon="true"
                app:sm_subtitle="@string/xml_private_message_desc"
                app:sm_title="@string/xml_private_message"/>

            <Button
                android:id="@+id/btn_signout"
                style="@style/ButtonFillPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceExtraLarge"
                android:background="@color/colorWhite"
                android:text="@string/xml_sigout"
                android:textColor="@color/materialRed"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
