<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.sheendev.qrbarcodescanner.app.module.generatebarcode.GenerateBarcodeActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:padding="@dimen/spaceLarge">

                <TextView
                    android:visibility="gone"
                    android:gravity="center"
                    android:id="@+id/txt_advanced_config"
                    android:drawableRight="@drawable/ic_chevron_right"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textMedium"
                    style="@style/TitleSecondary"
                    android:text="@string/xml_show_advanced_configuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:inputType="text"
                    android:id="@+id/txt_input"
                    style="@style/CaptionMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/xml_input_text_here"
                    app:met_floatingLabel="highlight"/>

                <Button
                    android:id="@+id/btn_generate"
                    style="@style/ButtonFillPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/spaceMedium"
                    android:text="@string/xml_generate"/>

            </LinearLayout>

            <TextView
                style="@style/CaptionMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spaceLarge"
                android:text="@string/xml_result"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spaceLarge"
                android:paddingRight="@dimen/spaceLarge">

                <ImageView
                    android:id="@+id/img_code"
                    android:scaleType="fitXY"
                    android:layout_width="@dimen/largeIcon"
                    android:layout_height="@dimen/largeIcon"
                    android:src="@drawable/img_barcode_thumb"/>

                <include layout="@layout/layout_scaner_option"/>

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>
